Fix overflow in small screens

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,6 @@ html {
 
 body {
 	overscroll-behavior-y: none;
-	@apply w-screen;
 }
 
 nav .logo svg {
